feat: Improve Utils